# invoice_gen.rs

./: Cargo.toml  README.md
assets/: invoice_template.html
src/: lib.rs
src/clockify/: client.rs  mod.rs
src/invoice/: exporter.rs  factory.rs  mod.rs
src/util/: mod.rs
