[package]
name = "invoice_gen"
version = "0.1.0"
edition = "2021"
description = "A simple tool to generate invoices for your customers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.2.2"
wkhtmltopdf = "0.4.0"
chrono = "0.4.19"
serde_json = "1.0.81"
serde_derive = "1.0.137"
serde = "1.0.137"
toml = "0.5.9"
clap = { version = "3.1.18", features = ["derive"] }